<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Motiv</string>
    <string name="fatal_error_message">Por favor nos perdoe, cometemos um erro fatal e já estamos trabalhando nisso, não vá reclamar da gente pros amigos.</string>
    <string name="fatal_error_title">Alguma coisa deu errado :(</string>
    <string name="facebook_app_id">259084328108067</string>
    <string name="fb_login_protocol_scheme">fb259084328108067</string>
    <string name="card_transaction">quoteCard</string>
    <string name="quote_transaction">quoteTransaction</string>
    <string name="author_transaction">authorTransaction</string>
    <string name="company">Ilustris 2018 - %d</string>
    <string name="user_pic_transaction">profilepic</string>
    <string name="follow_user">seguir</string>
    <string name="message_user">mensagem</string>
    <string name="empty_text" />
    <string name="default_notification_channel_id">motivchannel</string>
    <string name="fcm_message">🌠 Motiv</string>
    <string name="cancel_button">Cancelar</string>
    <string name="fatal_error_button">voltar</string>
</resources>