<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_animation">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="" />

        <RelativeLayout
            android:id="@+id/quoteInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical">


            <include
                android:id="@+id/userTop"
                layout="@layout/user_quote_card_view"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_centerInParent="true" />


        </RelativeLayout>


        <TextView
            android:id="@+id/quoteDate"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteCard"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="50dp"
            android:background="@drawable/bottom_line"
            android:padding="@dimen/default_padding"
            android:textColor="@color/lwhite"
            tools:text="10 de Outubro de 2019" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/quoteCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quoteInfo"
            android:layout_margin="@dimen/default_padding"
            android:animateLayoutChanges="true"
            android:elevation="@dimen/cardview_default_elevation"
            android:foreground="?attr/selectableItemBackground"
            android:hapticFeedbackEnabled="true"
            android:orientation="vertical"
            android:stateListAnimator="@animator/list_animator"
            android:transitionName="@string/card_transaction"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            tools:visibility="visible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/quoteMainView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/quoteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/author_text_view"
                        android:layout_below="@id/quoteInfo"
                        android:focusable="true"
                        android:longClickable="true"
                        android:padding="@dimen/default_padding"
                        android:textIsSelectable="true"
                        android:textSize="@dimen/big_quote_size"
                        android:textStyle="bold"
                        android:transitionName="@string/quote_transaction"
                        android:typeface="normal"
                        tools:text="Everything I do \nI tell you all the time"
                        tools:textColor="@color/white" />

                    <TextView
                        android:id="@+id/author_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/transparent"
                        android:focusable="true"
                        android:longClickable="true"
                        android:padding="@dimen/default_padding"
                        android:textIsSelectable="true"
                        android:textSize="24sp"
                        android:textStyle="italic"
                        android:transitionName="@string/author_transaction"
                        tools:text="Lana Del Rey"
                        tools:textColor="@color/white" />
                </LinearLayout>
            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>
</layout>