<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:id="@+id/quoteCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hapticFeedbackEnabled="true"
        android:orientation="vertical"
        android:transitionName="@string/card_transaction">

        <ImageView
            android:foreground="?selectableItemBackground"
            android:id="@+id/userBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:tintMode="src_over"
            app:tint="@color/lblack" />

        <LinearLayout
            android:id="@+id/profileContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilepic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:contentDescription="Profile picture"
                android:fitsSystemWindows="true"
                android:padding="@dimen/padding_default"
                android:stateListAnimator="@animator/list_animator"
                android:tooltipText="Alterar foto de perfil"
                android:transitionName="@string/profilepictransiction"
                app:civ_border_color="?android:textColorPrimary"
                app:civ_border_width="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic__41_floppy_disk" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_default"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textColor="?android:textColorPrimary"
                android:textStyle="bold"
                tools:text="Caio Alves Ferreira" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintTop_toBottomOf="@id/profilepic"
                tools:layout_editor_absoluteY="16dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/followButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_padding"
                    android:layout_toStartOf="@id/messageButton"
                    android:text="@string/follow_user"
                    android:textColor="?android:textColorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:cornerRadius="@dimen/radius_small"
                    app:elevation="0dp"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/messageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/default_padding"
                    android:drawableEnd="@drawable/ic_paper_plane"
                    android:drawableTint="@color/white"
                    android:text="@string/message_user"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:cornerRadius="@dimen/radius_small"
                    app:elevation="0dp"
                    app:iconTint="@color/white"
                    tools:visibility="visible" />

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>


</layout>


